<resources xmlns:Xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Just Java</string>

    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">"Toppings "</string>"

    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank you! </string>

    <!-- Name for the order summary. It wil be shown in the farmat of "Name: Amy" where Amy
    is the user's name. [Char LIMIT=NONE] -->
    <string name="order_summary_name">Name: <Xliff:g id="name" example="Amy">%s</Xliff:g></string>

    <string name="name">Name</string>

    <string name="whipped_cream">Whipped Cream</string>

    <string name="chocolate">Chocolate </string>

    <string name="quantity">Quantity</string>

    <string name="order_summary">Order Summary</string>

    <string name="default_total_thank_you"></string>

    <string name="order">Order</string>

    <string name="addChocolate">add Chocolate?</string>

    <string name="addWhippedCream">add Whipped Cream?</string>

    <string name="total">Total $ </string>
</resources>